--- a/application/web/public/signup.html
+++ b/application/web/public/signup.html
@@ -14,10 +14,6 @@
             <h1 class="title">
                 <a href="index.html" class="title-link">Rate My Video Game</a>
             </h1>
-            <div class="buttons">
-                <a href="signup.html" class="pill-button">Sign Up</a>
-                <a href="login.html" class="pill-button">Login</a> 
-            </div>
         </div>
     </header>
     <section class="content-section">
@@ -25,6 +21,12 @@
 
         <div class="login-box">
             <h2>Create an Account</h2>
+            <p>
+                Already have an account?
+                <a href="login.html" class="create-account-link"
+                  >Log in</a
+                >
+              </p>
             <div class="google-login-container">
                 <button class="google-login-btn">
                     <img src="google.png" alt="Google Icon"> Continue with Google
